fix: There was a avatar image overflow issue when scrolling on datatable. This was casued because position property was set to static by default. This prevents z-index from having any effect. Just needed to set it to relative instead.

--- a/client/pages/Users/Users.module.css
+++ b/client/pages/Users/Users.module.css
@@ -20,6 +20,7 @@
     height: 50px;
     border-radius: 50%;
     margin-right: 10px;
+    position: relative;
 }
 
 .email {
